Become Distributor page added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <title>Pete's Claws and Fins</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Style -->
@@ -217,7 +218,7 @@
                                 <div class="flex-column _50-width md_text-center md_90-width">
                                     <h2 class="h2 text-yellow sm_font-size-30">ABOUT US</h2>
                                     <p class="para sm_font-size-11">
-                                        Pete’s Claws and Fins is a high-tech producer of ecological seafood. We use state-of-the-art, highly
+                                        Pete's Claws and Fins is a high-tech producer of ecological seafood. We use state-of-the-art, highly
                                         computerized equipment to monitor and manage our seafood to ensure it is of the highest possible
                                         quality. All equipment we use is developed by ourselves in-house. We are the only company operating such
                                         high-tech equipment. The company started its research and development 2016 by Peter Persson, a Swedish
