Become Distributor page added

--- a/index.html
+++ b/index.html
@@ -36,24 +36,18 @@
                 <hr>
                 <ul>
                     <ul class="menu">
-                    <li class="menu-dropdown"><a href="">Soft-shelled mudcrabs</a><i class="fa fa-angle-down" aria-hidden="true"></i></li>
+                    <li class="menu-dropdown"><a href="">Soft-shelled mudcrabs</a></li>
                     <li class="sub-menu">
                         <ul>
                             <li><a>Sub Menu 1</a></li>
                             <li><a>Sub Menu 2</a></li>
                         </ul>
                     </li>
-                    <li class="menu-dropdown"><a href="#">Hard-shelled mudcrabs</a><i class="fa fa-angle-down" aria-hidden="true"></i></li>
-                    <li class="sub-menu">
-                        <ul>
-                            <li><a>Sub Menu 1</a></li>
-                            <li><a>Sub Menu 2</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Hard-shelled mudcrabs</a></li>
                     <li><a href="#">Information</a></li>
                     <li><a href="#">Where to buy</a></li>
                     <li><a href="#">Contact Us</a></li>
-                    <li><a href="">Become distributor</a></li>
+                    <li><a href="pages/become-distributor/">Become distributor</a></li>
                     <li><a href="">Log In</a></li>
                 </ul>
                 </ul>
