Create email confirmation page and optimize mobile display

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="#">Where to buy</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="pages/become-distributor/">Become distributor</a></li>
-                    <li><a href="">Log In</a></li>
+                    <li><a href="pages/login/index.html">Log In</a></li>
                 </ul>
                 </ul>
             </nav>
@@ -202,7 +202,7 @@
                 <div class="content">
                     <div class="full-width align-in-center pb-120">
                         <div class="_75-width flex-column z-index-1 justify-center md_90-width md_align-center">
-                            <h1 class="h1 text-yellow sm_font-size-35 sm_mt-130">We are using</h1>
+                            <h1 class="h1 text-yellow sm_font-size-35 sm_mt-40">We are using</h1>
                             <p class="sub-heading mb-20 sm_text-center sm_mb-0">High-tech and artificial intelligence (AI) to produce ecological
                                 food.</p>
                             <div class="full-width justify-between md_flex-column md_align-center md_justify-center">
