--- a/pages/soft-shelled-mudcrabs/pages/frozen-whole.html
+++ b/pages/soft-shelled-mudcrabs/pages/frozen-whole.html
@@ -7,17 +7,22 @@
     <title>Frozen - Whole</title>
 </head>
 <body>
-    <div class="header align-center justify-between">
-        <h2>Frozen - Whole</h2>
-        <span class="material-icons close cursor-pointer">
-            close
-        </span>
-    </div>
-    <div class="image max-w700">
-        <img src="../../assets/images/image_3.jpg">
-    </div>
-    <div class="content">
-        Frozen whole 
+    <div id="content">
+        <div class="header align-center justify-between">
+            <h2>Frozen - Whole</h2>
+            <span class="material-icons close cursor-pointer">
+                close
+            </span>
+        </div>
+        <!-- <div class="content">
+            Frozen whole 
+        </div>
+        <div class="image">
+            <img src="../../assets/images/image_3.jpg">
+        </div> -->
+        <div class="pdf spinner">
+            <iframe onload="$('.spinner').removeClass('spinner')" src="https://docs.google.com/viewer?url=https://clawsandfins.demo.zhardsoft.com/WebRequirements.pdf&embedded=true"></iframe>
+        </div>
     </div>
 </body>
 </html>
