--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=5">
 
     <!-- Icon -->
     <link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css"> <!-- Font Awesome Icon 4.7.0 -->
@@ -16,36 +16,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/svg-inject.js"></script>
     <script src="js/js-cookie.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js?v=5"></script>
 </head>
-<body class="logged-in"> <!-- Class "logged-in" must be defined when the user is logged in -->
-
-    <!-- Logged In - Welcome Message, Company Info and Account Setting Button -->
-    <div class="nav-top justify-center">
-        <div class="nav-area max-w1280 justify-between">
-            <div class="welcome-message no-wrap">
-                <h4>Welcome Back,</h4>
-                <h3>Contact Name</h3>
-            </div>
-            <div class="align-center">
-                <div class="company-info align-center">
-                    <img src="assets/images/logo.png">
-                    <div>
-                        <h3>Company Name</h3>
-                        <span>company@gmail.com</span>
-                    </div>
-                </div>
-                <div class="nav-right align-center">
-                    <a class="nav-button align-in-center" href="">
-                        <span class="material-icons">
-                            manage_accounts
-                        </span>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- End -->
+<body>
 
     <div class="body-content max-w1280 margin-auto overflow-hidden">
         <!-- Menu -->
@@ -65,26 +38,102 @@
                 <hr>
                 <ul class="menu">
                     <li><a href="pages/soft-shelled-mudcrabs/">Soft-shelled mudcrabs</a></li>
-                    <!-- <li class="sub-menu">
-                        <ul>
-                            <li id="frozen-whole"><a class="popup-page-url" parent-id="frozen-whole" href="pages/soft-shelled-mudcrabs/pages/frozen-whole.html">Frozen - Whole</a></li>
-                            <li id="frozen-cleaned"><a class="popup-page-url" parent-id="frozen-cleaned" href="pages/soft-shelled-mudcrabs/pages/frozen-cleaned.html">Frozen - Cleaned</a></li>
-                            <li id="alive"><a class="popup-page-url" parent-id="alive" href="pages/soft-shelled-mudcrabs/pages/alive.html">Alive</a></li>
-                            <li id="frozen-deepfried"><a class="popup-page-url" parent-id="frozen-deepfried" href="pages/soft-shelled-mudcrabs/pages/frozen-deepfried.html">Frozen - Deep Fried</a></li>
-                        </ul>
-                    </li> -->
                     <li><a href="pages/hard-shelled-mudcrabs/">Hard-shelled mudcrabs</a></li>
                     <li><a href="pages/information/">Information</a></li>
                     <li><a href="pages/where-to-buy/">Where to buy</a></li>
-                    <li><a href="pages/contact-us.html">Contact Us</a></li>
-                    <li><a href="pages/become-distributor/">Become distributor</a></li>
-                    <li><a href="pages/login/">Log In</a></li>
+                    <li><a href="pages/contact-us.html">Contact us</a></li>
+                    <li class="distributor-investor-menu display-none"><a href="pages/updates.html">Updates</a></li>
+                    <li class="distributor-investor-menu display-none"><a href="pages/picture-gallery.html">Picture Gallery</a></li>
+                    <li class="distributor-investor-menu display-none"><a href="pages/future-ideas.html">Future Ideas</a></li>
+                    <li class="distributor-investor-menu display-none"><a href="pages/financial-updates.html">Financial Updates</a></li>
+                    <li><a href="pages/become-distributor/">Become a distributor</a></li>
+                    <li><a href="pages/become-investor/">Become an investor</a></li>
                 </ul>
             </nav>
             <div class="menu-button-container z-index-5">
                 <button id="menu-toggle">M<br>E</br>N<br>U</button>
             </div>
         </div>
+
+        <!-- Visitor Topbar >>> -->
+        <div class="nav-top justify-center nav-visitor">
+            <div class="nav-area max-w1280 justify-between align-center">
+                <div class="welcome-message no-wrap">
+                    <h4>Welcome,</h4>
+                    <h3>Visitor</h3>
+                </div>
+                <div class="zoom-info-button">
+                    <button onclick="zoomNotif(0)">Content too small or big?</button>
+                </div>
+                <div class="align-center">
+                    <div class="company-info align-center">
+                        <div class="menu-dropdown-overlay">
+                            <ul>
+                                <li class="disable-menu"><a>Account Info</a></li>
+                                <li class="login-menu"><a href="pages/login/">Log in</a></li>
+                            </ul>
+                        </div>
+                        <div class="text-right">
+                            <h3>Visitor</h3>
+                            <span class="user-status">Unknown</span>
+                        </div>
+                        <span>V</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- >>> End -->
+        
+        <!-- After Login - Distributor/Inverstor Topbar >>> -->
+        <div class="nav-top justify-center nav-distributor-investor display-none">
+            <div class="nav-area max-w1280 justify-between align-center">
+                <div class="welcome-message no-wrap">
+                    <h4>Welcome Back,</h4>
+                    <h3>Contact Name</h3>
+                </div>
+                <div class="zoom-info-button">
+                    <button onclick="zoomNotif(0)">Content too small or big?</button>
+                </div>
+                <div class="align-center">
+                    <div class="company-info align-center">
+                        <div class="menu-dropdown-overlay">
+                            <ul>
+                                <li><a href="pages/account">Account Info</a></li>
+                                <li><a href="pages/account/add-user.html">Add User</a></li>
+                                <li class="md-divider"></li>
+                                <li class="logout-menu display-none"><a href="pages/logout.html">Log out</a></li>
+                            </ul>
+                        </div>
+                        <div class="text-right">
+                            <h3>Company Name</h3>
+                            <span class="user-status">Candidate</span>
+                        </div>
+                        <img src="assets/images/logo.png">
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- >>> End -->
+        
+        <!-- Temporary Script for Logged in User >>> -->
+        <script>
+            if (Cookies.get('logged-in')) {
+                $('.distributor-investor-menu').removeClass('display-none');
+                $('.distributor-investor-menu').nextAll().hide();
+                $('.distributor-investor-menu').show();
+                $('.login-menu').hide();
+                $('.logout-menu').show();
+                $('.nav-visitor').addClass('display-none');
+                $('.nav-distributor-investor').removeClass('display-none');
+            }
+
+            if (Cookies.get('logged-out')) {
+                openDialog('Logout','You are logged out');
+                Cookies.remove('logged-out', { path: '/' });
+            }
+        </script>
+        <!-- >>> End -->
 
         <!-- Header -->
         <header class="full-width text-white flex justify-between relative _mt_100">
@@ -231,8 +280,8 @@
                 <div class="content">
                     <div class="full-width align-in-center pb-120">
                         <div class="_75-width flex-column z-index-1 justify-center md_90-width md_align-center">
-                            <h1 class="h1 text-yellow sm_font-size-35 sm_mt-40">We are using</h1>
-                            <p class="sub-heading mb-20 sm_text-center sm_mb-0">High-tech and artificial intelligence (AI) to produce ecological
+                            <h1 class="h1 text-yellow sm_font-size-35 sm_mt-40 text-center">We are using</h1>
+                            <p class="sub-heading mb-20 text-center sm_mb-0">High-tech and artificial intelligence (AI) to produce ecological
                                 food.</p>
                             <div class="full-width justify-between md_flex-column md_align-center md_justify-center">
                                 <div class="w400 p-30 sm_p-10 md_w350 sm_w250">
