--- a/pages/login/login-success.html
+++ b/pages/login/login-success.html
@@ -7,7 +7,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css?v=5">
 
     <!-- Icon -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,12 +19,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../../js/svg-inject.js"></script>
     <script src="../../js/js-cookie.js"></script>
-    <script src="../../js/main.js"></script>
+    <script src="../../js/main.js?v=5"></script>
 
 </head>
 
 <body class="page-no-arc">
-    <div class="max-w1280 margin-auto overflow-hidden">
+    <div class="body-content max-w1280 margin-auto overflow-hidden">
         <!-- Menu -->
         <div id="mainMenuContainer" class="main-menu-container full-height w0 fixed">
             <nav id="main-menu" role="navigation">
@@ -46,9 +46,8 @@
                         <li><a href="../hard-shelled-mudcrabs/">Hard-shelled mudcrabs</a></li>
                         <li><a href="../information/">Information</a></li>
                         <li><a href="../where-to-buy/">Where to buy</a></li>
-                        <li><a href="../contact-us.html">Contact Us</a></li>
-                        <li><a href="../become-distributor/">Become distributor</a></li>
-                        <li><a href="../login/">Log In</a></li>
+                        <li><a href="../contact-us.html">Contact us</a></li>
+                        <li><a href="../become-distributor/">Become a distributor</a></li>
                     </ul>
                 </ul>
             </nav>
@@ -56,6 +55,77 @@
                 <button id="menu-toggle">M<br>E</br>N<br>U</button>
             </div>
         </div>
+
+        <!-- Visitor Topbar >>> -->
+        <div class="nav-top justify-center nav-visitor">
+            <div class="nav-area max-w1280 justify-between align-center">
+                <div class="welcome-message no-wrap">
+                    <h4>Welcome,</h4>
+                    <h3>Visitor</h3>
+                </div>
+                <div class="zoom-info-button">
+                    <button onclick="zoomNotif(0)">Content too small or big?</button>
+                </div>
+                <div class="align-center">
+                    <div class="company-info align-center">
+                        <div class="menu-dropdown-overlay">
+                            <ul>
+                                <li class="disable-menu"><a>Account Info</a></li>
+                                <li class="login-menu"><a href="../login/">Log in</a></li>
+                            </ul>
+                        </div>
+                        <div class="text-right">
+                            <h3>Visitor</h3>
+                            <span class="user-status">Unknown</span>
+                        </div>
+                        <span>V</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- >>> End -->
+        
+        <!-- After Login - Distributor/Inverstor Topbar >>> -->
+        <div class="nav-top justify-center nav-distributor-investor display-none">
+            <div class="nav-area max-w1280 justify-between align-center">
+                <div class="welcome-message no-wrap">
+                    <h4>Welcome Back,</h4>
+                    <h3>Contact Name</h3>
+                </div>
+                <div class="zoom-info-button">
+                    <button onclick="zoomNotif(0)">Content too small or big?</button>
+                </div>
+                <div class="align-center">
+                    <div class="company-info align-center">
+                        <div class="menu-dropdown-overlay">
+                            <ul>
+                                <li><a href="../account">Account Info</a></li>
+                                <li><a href="../account/add-user.html">Add User</a></li>
+                                <li class="md-divider"></li>
+                                <li class="logout-menu display-none"><a href="../logout.html">Log out</a></li>
+                            </ul>
+                        </div>
+                        <div class="text-right">
+                            <h3>Company Name</h3>
+                            <span class="user-status">Candidate</span>
+                        </div>
+                        <img src="../../assets/images/logo.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- >>> End -->
+        
+        <!-- Temporary Script for Logged in User >>> -->
+        <script>
+            if (Cookies.get('logged-in')) {
+                $('.login-menu').hide();
+                $('.logout-menu').show();
+                $('.nav-visitor').addClass('display-none');
+                $('.nav-distributor-investor').removeClass('display-none');
+            }
+        </script>
+        <!-- >>> End -->
 
         <!-- Content -->
         <div class="content-wrapper">
@@ -73,7 +143,7 @@
                                 </div>
                                 <h1 class="h1 text-yellow sm_font-size-35 text-center mb-30">Login Success</h1>
                                 <div class="text-light p-20 text-center">
-                                    Please wait, you will be redirected to account page
+                                    Please wait, you will be redirect you...
                                 </div>
                             </div>
                         </div>
@@ -85,8 +155,11 @@
     </div>
 
     <script>
+        Cookies.set('logged-in', 'true', { path: '/' });
         $(function(){
-
+            setTimeout(function(){
+                window.location.href= '../../';
+            },1000);
         })
     </script>
 </body>
