--- a/pages/soft-shelled-mudcrabs/pages/frozen-cleaned.html
+++ b/pages/soft-shelled-mudcrabs/pages/frozen-cleaned.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <div class="header align-center justify-between">
-        <h2>Frozen - Cleaned</h2>
-        <span class="material-icons close cursor-pointer">
-            close
-        </span>
-    </div>
-    <div class="image max-w700">
-        <img src="../../assets/images/image_2.jpg">
-    </div>
-    <div class="content">
-        Frozen Cleaned
+    <div id="content">
+        <div class="header align-center justify-between">
+            <h2>Frozen - Cleaned</h2>
+            <span class="material-icons close cursor-pointer">
+                close
+            </span>
+        </div>
+        <div class="content">
+            Frozen Cleaned
+        </div>
+        <div class="image">
+            <img src="../../assets/images/image_2.jpg">
+        </div>
     </div>
 </body>
 
