--- a/pages/login/forgot-password.html
+++ b/pages/login/forgot-password.html
@@ -7,7 +7,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="../../css/common.css">
-    <link rel="stylesheet" href="../../css/style.css?v=5">
+    <link rel="stylesheet" href="../../css/style.css?v=7">
 
     <!-- Icon -->
     <link rel="stylesheet" href="../../assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../../js/svg-inject.js"></script>
     <script src="../../js/js-cookie.js"></script>
-    <script src="../../js/main.js?v=5"></script>
+    <script src="../../js/main.js?v=7"></script>
 
 </head>
 
@@ -67,8 +67,8 @@
                 <div class="zoom-info-button">
                     <button onclick="zoomNotif(0)">Content too small or big?</button>
                 </div>
-                <div class="align-center">
-                    <div class="company-info align-center">
+                <div class="align-center full-height">
+                    <div class="company-info align-center full-height">
                         <div class="menu-dropdown-overlay">
                             <ul>
                                 <li class="disable-menu"><a>Account Info</a></li>
@@ -76,7 +76,6 @@
                             </ul>
                         </div>
                         <div class="text-right">
-                            <h3>Visitor</h3>
                             <span class="user-status">Unknown</span>
                         </div>
                         <span>V</span>
@@ -96,8 +95,8 @@
                 <div class="zoom-info-button">
                     <button onclick="zoomNotif(0)">Content too small or big?</button>
                 </div>
-                <div class="align-center">
-                    <div class="company-info align-center">
+                <div class="align-center full-height">
+                    <div class="company-info align-center full-height">
                         <div class="menu-dropdown-overlay">
                             <ul>
                                 <li><a href="../account">Account Info</a></li>
